# cabank

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test.py
data/: .gitignore  default_config.json
src/: balance.py  cli.py  main.py  utils.py
src/cabank/: balance.py  cli.py  main.py  utils.py
